# playground

./: .Rprofile  .gitignore  .mise.toml  Manifest.toml  Project.toml  README.md  cspell.yml  package-lock.json  package.json  pyproject.toml  setup-all.sh  setup-renv.R  start-lab.sh  start-notebook.sh
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  installed_packages.list  update-package-list.sh
setup/: setup-all.sh  setup-cabocha.sh  update-jupyter-template.sh
src/: playground.jl
src/python/: mecab_cabocha.py
