[project]
name = "playground"
version = "0.1.0"
description = "Playground"
authors = [{ name = "Shoichieo Odaka", email = "odakas1994@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "arch>=7.1.0",
    "armagarch>=1.0.4",
    "black>=24.8.0",
    "fastsom>=1.0.2",
    "functime>=0.9.5",
    "huggingface-hub>=0.26.1",
    "ipyvuetable>=0.7.16",
    "jax>=0.4.31",
    "jupyter>=1.1.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-language-pack-ja-jp>=4.2.post3",
    "jupyterlab-lsp>=5.1.0",
    "lightgbm>=4.5.0",
    "matplotlib-fontja>=1.0.0",
    "matplotlib>=3.9.2",
    "mecab-python3>=1.0.8",
    "mgarch>=0.3.0",
    "mvgarch>=1.0.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "patito>=0.6.2",
    "plotly>=5.24.1",
    "polarify>=0.2.0",
    "polars-ds>=0.6.1",
    "polars>=0.20.31",
    "polugins>=0.5.1",
    "pyarrow>=17.0.0",
    "pymc>=5.17.0",
    "pyper>=1.1.2",
    "pystan>=3.10.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.11.0",
    "ruff-lsp>=0.0.58",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shirokumas>=0.0.3",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "tensorflow>=2.18.0",
    "torch>=2.4.1",
    "unidic-lite>=1.0.8",
    "xarray>=2024.10.0",
    "yfinance>=0.2.48",
]

[project.scripts]
hello = "workspace:playground"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workspace"]
