[project]
name = "playground"
version = "0.1.0"
description = "Playground"
authors = [{ name = "Shoichieo Odaka", email = "odakas1994@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "arch>=7.2.0",
    "armagarch>=1.0.4",
    "black>=25.1.0",
    "fastsom>=1.0.2",
    "huggingface-hub>=0.31.2",
    "ipyvuetable>=0.7.21",
    "jax>=0.5.0",
    "jupyter>=1.1.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-language-pack-ja-jp>=4.4.post0",
    "jupyterlab-lsp>=5.1.0",
    "lightgbm>=4.6.0",
    "matplotlib-fontja>=1.1.0",
    "matplotlib>=3.10.3",
    "mecab-python3>=1.0.10",
    "mgarch>=0.3.0",
    "mvgarch>=1.2.4",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "patito>=0.6.2",
    "pingouin>=0.5.5",
    "plotly>=6.1.0",
    "polarify>=0.2.0",
    "polars-ds>=0.8.3",
    "polars>=1.29.0",
    "polugins>=0.5.1",
    "pyarrow>=20.0.0",
    "pymc>=5.22.0",
    "pyper>=1.1.2",
    "pystan>=3.10.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.11.0",
    "ruff-lsp>=0.0.62",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shirokumas>=0.0.3",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "unidic-lite>=1.0.8",
    "xarray>=2025.4.0",
    "yfinance>=0.2.61",
]

[project.scripts]
hello = "workspace:playground"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workspace"]
